Fix gap on nav

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -222,6 +222,9 @@ a{
   position: relative;
   height: auto;
  }
+ .navs-header {
+  gap: 10px;
+ }
 
 }
 @media only screen and (min-width: 601px) and (max-width: 1024px) {
